--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -209,7 +209,7 @@
                 <a class="add-track btn btn-success {{ tracking_formset.prefix }}-add-row add-row" title="{{ tracking_formset.addText }}" href="javascript:void(0);"><i class="fa fa-fw fa-plus"></i>{{ tracking_formset.addText }}</a>
               </div><br><br>
               <div class="form-group col-md-12"><br><br>
-                  <button type="submit" id="send-btn" class="btn btn-primary">{% trans "Salvar" %}</button><br><br>
+                  <button type="submit" id="send-btn" class="btn btn-primary"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
                   <a href="{% url 'product_stock' %}"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
               </div>
             </form>
