--- a/html/templates/user_edit.html
+++ b/html/templates/user_edit.html
@@ -59,7 +59,7 @@
                   {% endfor %}
                 </div><br>
               {% endfor %}
-              <button type="submit" id="send-btn" class="btn btn-primary" onclick="$('.loading').show();">{% trans "Enviar" %}</button><br><br>
+              <button type="submit" id="send-btn" class="btn btn-primary" onclick="$('.loading').show();"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
               <a href="/"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
             </form>
 
