--- a/html/templates/detalhe_envio_brasil.html
+++ b/html/templates/detalhe_envio_brasil.html
@@ -74,7 +74,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                        <h4 class="modal-title"><i class="fa fa-fw fa-cogs"></i> Serviços necessários para o "Prep" desses produtos</h4>
+                                        <h4 class="modal-title"><i class="fa fa-fw fa-cogs"></i> Prep Services</h4>
                                     </div>
                                     <div class="modal-body">
                                         <div class="checkbox">
