--- a/html/templates/product_details.html
+++ b/html/templates/product_details.html
@@ -188,8 +188,8 @@
                     <p>{% trans "Confirma a exclusão do produto?" %}</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-danger">{% trans "Sim" %}</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-fw fa-check"></i> {% trans "Sim" %}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                     </p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
