--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -90,7 +90,7 @@
                   <label id="cSenha-error" class="error" for="cSenha">{{ error|escape }}</label>
                 {% endfor %}
               </div>
-              <button type="submit" id="send-btn" class="btn btn-primary">{% trans "Enviar" %}</button><br><br>
+              <button type="submit" id="send-btn" class="btn btn-primary">{% trans "Salvar" %}</button><br><br>
             </form>
                 {% else %}
             <p>{% trans "Token inválido." %}</p>
@@ -104,17 +104,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; Vendedor Online 2017" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; PrepShip Tool 2017" %}</span>
                 </div>
                 <div class="col-md-3">
-                    <ul class="list-inline social-buttons"><!--
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>-->
-                    </ul>
+                    <a href="https://prepshiptool.com" target="_blank" class="by download">
+                        <img src="../../static/img/logo-en-maior.png" width="20px"/> by PrepShip Tool
+                   </a>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
@@ -149,7 +144,7 @@
                     {% endif %}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
