--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -83,17 +83,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; Vendedor Online 2017" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; PrepShip Tool 2017" %}</span>
                 </div>
                 <div class="col-md-3">
-                    <ul class="list-inline social-buttons"><!--
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/groups/vendedorinternacional/">Facebook</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>-->
-                    </ul>
+                    <a href="https://prepshiptool.com" target="_blank" class="by download">
+                        <img src="../../static/img/logo-en-maior.png" width="20px"/> by PrepShip Tool
+                   </a>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
