--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
-                    <img src="/static/img/logo-en.png" />
+                    <img src="/static/img/clientes/wboss_logo_200x45.jpg" />
                 </a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
@@ -323,7 +323,7 @@
                 <div class="modal-body">
                     <p><strong>{% trans "Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay." %}</strong></p>
                     <br>
-                    <p class="center">Address: 8611 SW  207 Terrace<br />City: Miami ou Cutler Bay<br />State: FL<br />Zip code: 33189</p>
+                    <p class="center">Address: 1835 NW 112 Ave #170<br />City: Miami<br />State: FL<br />Zip code: 33172</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
