--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1513,7 +1513,7 @@ form small{
 
 .sistema .navbar-brand img{
     width: 200px;
-    margin-top: 12px;
+    margin-top: 9px;
 }
 
 .sistema .navbar-right {
@@ -1613,6 +1613,7 @@ footer.fixed-footer{
 
 .bandeira.bandeira-en{
     background-position: -43px -17px;
+    border: 0;
 }
 
 .index .navbar-right {
