Ajustes Logo wboss

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
-                    <img src="/static/img/clientes/wboss_logo_200x45.jpg" />
+                    <img src="/static/img/logo-en.png" />
                 </a>
             </div>
             <nav class="collapse navbar-collapse" id="bs-navbar">
@@ -307,7 +307,7 @@
                     {% endif %}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
@@ -326,7 +326,7 @@
                     <p class="center">Address: 1835 NW 112 Ave #170<br />City: Miami<br />State: FL<br />Zip code: 33172</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-power-off"></i>{% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
