--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -31,7 +31,7 @@
 
 <body id="page-top" class="login">
     <div id="login-box">
-            <img src="/static/img/clientes/wboss_logo_170x145.jpg" style="width: 170px;" />
+            <img src="/static/img/logo-en-maior.png" style="width: 170px;" />
             <p>{% trans "Digite abaixo seus dados de acesso" %}</p>
             <form action="" method="post" id="form-login">
               {% csrf_token %}
