--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="../../static/img/logo-en-maior.png" width="20px"/> by PrepShip Tool
+                        <img src="../../static/img/logo-en-maior.png" width="20px"/> by {% trans "PrepShip Tool" %}
                    </a>
                 </div>
                 <div class="col-md-5">
