equalização master / wboss

--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1613,6 +1613,7 @@ footer.fixed-footer{
 
 .bandeira.bandeira-en{
     background-position: -43px -17px;
+    border: 0;
 }
 
 .index .navbar-right {
