--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -255,7 +255,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="../../static/img/logo-en-maior.png" width="20px"/> by PrepShip Tool</a>
+                        <img src="../../static/img/logo-en-maior.png" width="20px"/> by {% trans "PrepShip Tool" %}</a>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
@@ -307,7 +307,7 @@
                     {% endif %}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
@@ -326,7 +326,7 @@
                     <p class="center">Address: 8611 SW  207 Terrace<br />City: Miami ou Cutler Bay<br />State: FL<br />Zip code: 33189</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-power-off"></i>{% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
