--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -29,8 +29,10 @@
                   {% if user|has_user_perm:'view_users' %}
                   <th>{% trans "Usuário" %}</th>
                   {% endif %}
-                  {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
+                  {% if billing_type == 2 %}
+                    {% if shipment.status == 1 and user|has_service_perm:'add_product' or shipment.status > 1 %}
                   <th>{% trans "Serviços" %}</th>
+                    {% endif %}
                   {% endif %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
                   <th>{% trans "Retirar" %}</th>
@@ -56,9 +58,13 @@
                   {% if user|has_user_perm:'view_users' %}
                   <td>{{ shipment.user.first_name }}</td>
                   {% endif %}
-                  {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
+                  {% if billing_type == 2 %}
                   <td>
-                      <a class="btn btn-primary add-service-product-shipment" title="{% trans 'Atribuir serviços' %}" href="javascript:void(0);" data-shipment-product-id="{{product.id}}"><i class="fa fa-fw fa-cogs"></i></a>
+                  {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
+                      <a class="btn btn-primary add-service-product-shipment" title="{% trans 'Atribuir serviços' %}" href="javascript:void(0);" data-shipment-product-id="{{product.id}}" data-shipment-product-uid="{{product.uid}}"><i class="fa fa-fw fa-cogs"></i></a>
+                  {% elif shipment.status > 1 %}
+                      <a class="btn btn-primary add-service-product-shipment" title="{% trans 'Visualizar serviços' %}" href="javascript:void(0);" data-shipment-product-id="{{product.id}}" data-shipment-product-uid="{{product.uid}}"><i class="fa fa-fw fa-cogs"></i></a>
+                  {% endif %}
                   </td>
                   {% endif %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'change_shipment' and shipment.is_archived is False and shipment.is_canceled is False %}
@@ -110,7 +116,12 @@
                 <!-- Campo desconto visao usuario -->
                 <p><strong><i class="fa fa-fw fa-minus-square"></i> {% trans "Desconto" %}: </strong> U$ <span id="DescCost">5,99</span></p>
 {% endcomment %}
-                <p><strong><i class="fa fa-fw fa-money"></i> {% trans "Valor Total" %}: </strong> U$ <span id="totalCost">{{ shipment.cost|floatformat:2|localize }}</span></p>
+                <p>
+                    <strong><i class="fa fa-fw fa-money"></i> {% trans "Valor Total" %}: </strong> U$ <span id="totalCost">{{ shipment.cost|floatformat:2|localize }}</span>
+                    {% if billing_type == 2 and shipment.status == 1 %}
+                    <span class="help help-tooltip help-icon" title="{% blocktrans %}Este valor poderá ser alterado após inclusão dos serviços necessários para o preparo.{% endblocktrans %}"></span>
+                    {% endif %}
+                </p>
             </div>
             {% timezone_name LANGUAGE_CODE as mytz %}
             <div class="{% block info_created_date %}{% endblock %}">
@@ -492,9 +503,12 @@
         </div>
      </form>
     {% endif %}
+    {% if billing_type == 2 %}
     {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
     <form>
     <input type="hidden" name="service_product_id" value="">
+    <input type="hidden" name="shipment_product_uid" value="">
+    {% endif %}
     <div id="add-service-product" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -505,18 +519,29 @@
                 <div class="modal-body">
                     {% for service in services%}
                     <div class="checkbox">
+                        {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
                         <label><input type="checkbox" name="service" value="{{ service.id }}"> {{ service.name }}</label>
                         <input type="text" name="price{{ service.id }}" value="{{service.price|unlocalize}}">
+                        {% else %}
+                        <span id="service_{{ service.id }}">
+                        <label>{{ service.name }}</label>
+                        - ${{service.price|unlocalize}}
+                        </span>
+                        {% endif %}
                     </div>
                     {% endfor %}
                 </div>
                 <div class="modal-footer">
+                    {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
                     <button type="button" id="send-btn-add-service-product" class="btn btn-info">{% trans "Salvar" %}</button>
+                    {% endif %}
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
     </div>
+    {% if shipment.status == 1 and user|has_service_perm:'add_product' %}
     </form>
+    {% endif %}
     {% endif %}
 {% endblock %}
