--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -255,7 +255,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="/static/img/logo-en-maior.png" width="20px"/> by {% trans "PrepShip Tool" %}</a>
+                        <img src="/static/img/logo-en-maior-footer.png" width="20px"/> by {% trans "PrepShip Tool" %}</a>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
@@ -323,7 +323,7 @@
                 <div class="modal-body">
                     <p><strong>{% trans "Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay." %}</strong></p>
                     <br>
-                    <p class="center">Address: 1835 NW 112 Ave #170<br />City: Miami<br />State: FL<br />Zip code: 33172</p>
+                    <p class="center">Address: 1230 N. Main St. Suite B2<br />City: Fort Bragg<br />State: California<br />Zip code: 95437</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-power-off"></i>{% trans "Fechar" %}</button>
