adição do menu de serviços.

--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load i18n permissions products shipments %}
+{% load i18n permissions products shipments services %}
 <html lang="{{ LANGUAGE_CODE }}">
 
 <head>
