--- a/html/templates/merchant_shipment_add.html
+++ b/html/templates/merchant_shipment_add.html
@@ -15,7 +15,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        {% if user|has_shipment_perm:'add_shipment' %}
+        {% if user|has_shipment_perm:'add_fbm_shipment' %}
         <div class="col-md-1 sidebar">
 
         </div>
