--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -171,6 +171,8 @@
                             {% endif %}
                         </ul>
                     </li>
+                    {% endif %}
+                    {% if user|has_shipment_perm:'view_fbm_shipments' or user|has_shipment_perm:'add_fbm_shipment' %}
                     <li class="dropdown ">
                         {% open_mf_shipments request.user as oms %}
                         <a href="#" class="dropdown-toggle logo-marca-link operacional-conf" data-toggle="dropdown">
@@ -181,15 +183,15 @@
                             {% endif %}
                         </a>
                         <ul class="dropdown-menu">
-                            {% if user|has_shipment_perm:'view_shipments' %}
+                            {% if user|has_shipment_perm:'view_fbm_shipments' %}
                             <li class="{% block merchant_shipment %}{% endblock %}">
                                 <a href="{% url 'merchant_shipment' %}"><i class="fa fa-fw fa-list-alt"></i> {% trans "Lista de Envios" %}</a>
                             </li>
                             {% endif %}
-                            {% if user|has_shipment_perm:'view_shipments' and user|has_shipment_perm:'add_shipment' %}
+                            {% if user|has_shipment_perm:'view_fbm_shipments' and user|has_shipment_perm:'add_fbm_shipment' %}
                             <li class="divider"></li>
                             {% endif %}
-                            {% if user|has_shipment_perm:'add_shipment' %}
+                            {% if user|has_shipment_perm:'add_fbm_shipment' %}
                             <li class="{% block merchant_shipment_add %}{% endblock %}">
                                 <a href="{% url 'merchant_shipment_add' %}"><i class="fa fa-fw fa-plus-square"></i> {% trans "Criar Envio" %}</a>
                             </li>
