--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -261,7 +261,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
-                        <img src="/static/img/logo-en-maior.png" width="20px"/> by {% trans "PrepShip Tool" %}</a>
+                        <img src="/static/img/logo-en.png" width="20px" /> by {% trans "PrepShip Tool" %}</a>
                 </div>
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
