--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -429,6 +429,17 @@
                     {% endfor %}
                   </div>
 
+
+                     <!-- Assinante -->
+                  <div class="form-group terms-cond">
+                    <label for="terms" id="assinante-check">
+                        <input type="checkbox" class="form-control" id="assinante" name="assinante" value="1" checked />
+                        {% trans "Quero me tornar um assinante" %}
+                    </label>
+                    <a href="javascript:void(0);" id="btn-explicacao" class="assinante-link">?</a>
+                  </div>
+
+
                   <!-- Termos -->
                   <div class="form-group terms-cond">
                     <label for="terms" id="terms-conditions-check">
@@ -439,6 +450,9 @@
                     <label id="terms-error" class="error" for="terms">{{ error|escape }}</label>
                     {% endfor %}
                   </div>
+
+
+
 
                   <button type="submit" id="send-btn" class="btn btn-primary"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
                 </form>
@@ -514,6 +528,25 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-fw fa-times-circle"></i> {% trans "Fechar" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Modal explicao plano -->
+
+    <div id="assinantes-modal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">{% trans "Porque se tornar um assinante" %}</h4>
+                </div>
+                <div class="modal-body">
+                    <p>{% trans "- Tenha acesso a todos os lotes a venda na nossa plataforma<br> - Receba notificações sempre que for lançado um lote novo<br> - Compre pelo paypal <br> - Imediatamente seu produto estará disponível para redirecionamento<br> - Sim, o redirecionamento também é conosco<br /> - Entre outras excelentes vantagens.<br><br> Para isso, marque a opção 'Quero ser um assinante' e desfrute das vantagens de ser um assinante." %}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
                 </div>
             </div>
         </div>
